--- a/references.bib
+++ b/references.bib
@@ -1719,3 +1719,19 @@ archivePrefix = "arXiv",
   pages = {1097--1105},
 }
 
+@ARTICLE{2019MNRAS.482.2823P,
+       author = {{Plazas}, A.~A. and {Meneghetti}, M. and {Maturi}, M. and {Rhodes}, J.},
+        title = "{Image simulations for gravitational lensing with SKYLENS}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: strong, galaxies: clusters: general, dark energy, dark matter, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2019",
+        month = "Jan",
+       volume = {482},
+        pages = {2823-2832},
+          doi = {10.1093/mnras/sty2737},
+archivePrefix = {arXiv},
+       eprint = {1805.05481},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2019MNRAS.482.2823P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
