--- a/paper.tex
+++ b/paper.tex
@@ -192,7 +192,7 @@ Centre for Astrophysics and Supercomputing, Swinburne University of Technology, 
 
 \abstract{
 %\begin{abstract}
-Large scale imaging surveys will increase the number of galaxy-scale strong lensing candidates by maybe three orders of magnitudes beyond the number known today.  Finding these rare objects will require picking them out of at least tens of millions of images and deriving scientific results from them will require quantifying the efficiency and bias of any search method.  To achieve these objectives automated methods must be developed.
+Large-scale imaging surveys will increase the number of galaxy-scale strong lensing candidates by maybe three orders of magnitudes beyond the number known today.  Finding these rare objects will require picking them out of at least tens of millions of images, and deriving scientific results from them will require quantifying the efficiency and bias of any search method.  To achieve these objectives automated methods must be developed.
 Because gravitational lenses are rare objects, reducing false positives will be particularly important.  We present a description and results of an open gravitational lens finding challenge.  Participants were asked to classify 100,000 candidate objects as to whether they were gravitational lenses or not with the goal of developing better automated methods for finding lenses in large data sets.   A variety of methods were used including visual inspection, arc and ring finders, support vector machines (SVM) and convolutional neural networks (CNN).  We find that many of the methods will be easily fast enough to analyse the anticipated data flow.  In test data, several methods are able to identify upwards of half the lenses after applying some thresholds on the lens characteristics such as lensed image brightness, size or contrast with the lens galaxy without making a single false-positive identification.  This is significantly better than direct inspection by humans was able to do.  Having multi-band, ground based data is found to be better for this purpose than single-band space based data with lower noise and higher resolution, suggesting that multi colour data is crucial.  Multi-band space based data will be superior to ground based data.
 The most difficult challenge for a lens finder is differentiating between rare, irregular and ring-like face-on galaxies and true gravitational lenses.  The degree to which the efficiency and biases of lens finders can be quantified largely depends on the realism of the simulated data on which the finders are trained.
 }%\end{abstract}
@@ -202,7 +202,7 @@ The most difficult challenge for a lens finder is differentiating between rare, 
 \section{Introduction}
 \label{sec:introduction}
 
-Strong gravitational lenses are rare cases where a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.   The first strong lens was discovered in 1979 by \citet{1979Natur.279..381W} and since then several hundred of them have been found.
+Strong gravitational lenses are rare cases in which a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.   The first strong lens was discovered in 1979 by \citet{1979Natur.279..381W} and since then several hundred of them have been found.
 When the lens is an individual galaxy and the source a quasar, there are two, four or five distinct images of the source.  The time-delay between images,  the magnification ratios between images and the image positions can all be used to model the mass distribution of the lens and measure cosmological parameters.  When the lens is a cluster of galaxies the images of background galaxies are multiplied and distorted into many thin arcs.   When the lens is an individual galaxy and the background source also a galaxy, the lensed images can take the form of a partial or complete ring seen around or through the lens galaxy, an {\it Einstein ring}.   
 
 Strong lenses have to date provided very valuable scientific information.  They have been used to study how dark matter is distributed in galaxies and clusters \citep[e.g.][]{1991ApJ...373..354K,2001ApJ...554.1216C,2002ApJ...568L...5K,2003ApJ...587..143R,2003ApJ...583..606K,2005MNRAS.360.1333W,2005ApJ...623...31D,2009MNRAS.392..945V,2016MNRAS.463.3115T} and  to measure the Hubble constant and other cosmological parameters 
@@ -222,10 +222,10 @@ Some automated algorithms have been developed in the past to detect lenses by th
 features \citep{2006astro.ph..6757A,2007AandA...472..341S, 2017AandA...597A.135B} and rings 
 \citep{2014ApJ...785..144G,2014AandA...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007AandA...461..813C,2012ApJ...749...38M,2016AandA...592A..75P}.  
 
-\cite{2009ApJ...694..924M} pioneered an automated technique for finding Einstein ring type lenses that uses a lens modeling code to fit a model to all candidates and picks out the ones that fit the model well \citep[see also][]{2017arXiv170401585S}.   This approach has the attractive feature that it distinguishes lenses from non-lenses by their similarity to what we expect a lens to look like and priors can be put on the model parameters that are physically motivated, unlike the next category of finders below.  Challenges arise in making the modeling fast and automatic enough to handle large 
+\cite{2009ApJ...694..924M} pioneered an automated technique for finding Einstein ring type lenses that uses a lens modelling code to fit a model to all candidates and picks out the ones that fit the model well \citep[see also][]{2017arXiv170401585S}.   This approach has the attractive feature that it distinguishes lenses from non-lenses by their similarity to what we expect a lens to look like and priors can be put on the model parameters that are physically motivated, unlike the next category of finders below.  Challenges arise in making the modelling fast and automatic enough to handle large 
 data sets while allowing it to be flexible enough to find unusual lens configurations.  The YattaLens entrant to this challenge was of this type.
 
-More recently, machine learning techniques that have become widely used in the fields of computer image processing and artificial intelligence have been applied to this  and other problems in astronomy; in particular, artificial neural networks (ANNs), support vector machines (SVM), and logistic regression.  SVMs and some logistic regression methods belong to the family of reproducing kernel Hilbert Space methods. They learn from a training set how to classify objects using features given by predefined kernel functions.  ANNs , and a popular variant convolutional neural networks (CNNs),  are even more flexible in learning directly from a training set which features are the most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy, these families of algorithms are beginning to be used for categorizing galaxy morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017arXiv170207675P,2017MNRAS.471..167J,2017MNRAS.465.4325O,2017AandA...597A.135B,hartley2017support}.
+More recently, machine learning techniques that have become widely used in the fields of computer image processing and artificial intelligence have been applied to this  and other problems in astronomy; in particular, artificial neural networks (ANNs), support vector machines (SVM), and logistic regression.  SVMs and some logistic regression methods belong to the family of reproducing kernel Hilbert Space methods. They learn from a training set how to classify objects using features given by predefined kernel functions.  ANNs , and a popular variant convolutional neural networks (CNNs),  are even more flexible in learning directly from a training set which features are the most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy, these families of algorithms are beginning to be used for categorising galaxy morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017arXiv170207675P,2017MNRAS.471..167J,2017MNRAS.465.4325O,2017AandA...597A.135B,hartley2017support}.
 
 Given the future of this field, with large amounts of data coming soon and many new ideas emerging, it is timely to stage a series of challenges to stimulate new work, determine what can realistically be done in lens finding and get a better idea of the strengths and weaknesses of different methods.  The long term goal is to get a set of algorithms that can handle Euclid, LSST or SKA data sets and produce high purity and high completeness lens samples with well defined efficiency or selection.  We anticipate further challenges in the future in which the realism of the data simulations will become progressively better.  Here we have chosen to concentrate on galaxy/small group scale lenses where the background source is a galaxy because we feel that this is where the most progress can be made and the scientific return is the highest, but QSO lens and cluster/group lens challenges may follow.
 
@@ -238,15 +238,14 @@ The challenge was in fact two separate challenges that could be entered independ
 
 In each case, a training set of 20,000 images in each band was provided for download at any time along with a key giving some properties of the object including whether it was a gravitational lens.  Each image was $101\times101$ pixels.  These specifications were not of particular significance except that the image size would encompass almost all galaxy-galaxy lenses and that the number of images (including ones with and without noise, lens and source which were needed for later analysis) was not too large.
 The participants were free to download these sets and train their algorithms on them.  To enter the contest, the participants needed to register with a team name at which point they would be given a unique key and the address of a test data set.  These data sets contained 100,000 candidates.  In the case of the multi-band ground-based set this was 400,000 images. The participants had 48 hours to upload a classification of all candidates consisting of a score between 0 and 1, 0 signifying the lowest confidence that it is a lens and 1 signifying the highest.  This ranking could have been a simple binary (0 or 1) classification  or it could have been a continuous range of numbers representing the probability of being a lens or it could have been a finite number of confidence levels.  
-
 The challenge was opened on November 25, 2016 and closed on February 5, 2017.
 
 \section{The simulations}
 \label{sec:simulation}
 
-Creating the mock images started with a cosmological N-body simulation, in this case the Millennium simulation \citep{2009MNRAS.398.1150B}.   A catalog of dark matter halos and galaxies  within a light-cone was constructed within the Millennium Observatory project \citep{2013MNRAS.428..778O}.   The challenge sets were based on a 1.6 sq.deg. light cone extending out to redshift $z=6$ using all the simulation snapshots.  The halos were found with a friends-of-friends algorithm and characterised by a total mass, size and half mass radius.  They included subhalos of larger halos.  The halos where populated with galaxies based on their merger history using the semi-analytic model  (SAM) of \cite{2011MNRAS.413..101G}.
+Creating the mock images started with a cosmological N-body simulation, in this case the Millennium simulation \citep{2009MNRAS.398.1150B}.   A catalogue of dark matter halos and galaxies  within a light-cone was constructed within the Millennium Observatory project \citep{2013MNRAS.428..778O}.   The challenge sets were based on a 1.6 sq.deg. light cone extending out to redshift $z=6$ using all the simulation snapshots.  The halos were found with a friends-of-friends algorithm and characterised by a total mass, size and half mass radius.  They included subhalos of larger halos.  The halos where populated with galaxies based on their merger history using the semi-analytic model  (SAM) of \cite{2011MNRAS.413..101G}.
 
-The halo catalog was read into the GLAMER lensing code \citep{2014MNRAS.445.1942M,2014MNRAS.445.1954P} to do all the ray-tracing.    Within this code a Navarro, Frenk \& White (NFW) \citep{1996ApJ...462..563N} profile is fit to the three parameters given above to represent the dark matter component of the lens.  The halos are projected onto a series of 20 lens planes  and the deflection angle at any point on each plane are calculated by summing the effects of all the halos with a hybrid tree method.  In this way the halos have the mass, concentration and clustering properties from the N-body simulation, but within each strong lens the mass resolution is not limited by the original simulation, but follows the analytic mass profile.   An additional mass component that will be discussed later is added to each halo to represent the stellar mass.
+The halo catalogue was read into the GLAMER lensing code \citep{2014MNRAS.445.1942M,2014MNRAS.445.1954P} to do all the ray-tracing.    Within this code a Navarro, Frenk \& White (NFW) \citep{1996ApJ...462..563N} profile is fit to the three parameters given above to represent the dark matter component of the lens.  The halos are projected onto a series of 20 lens planes  and the deflection angle at any point on each plane are calculated by summing the effects of all the halos with a hybrid tree method.  In this way the halos have the mass, concentration and clustering properties from the N-body simulation, but within each strong lens the mass resolution is not limited by the original simulation, but follows the analytic mass profile.   An additional mass component that will be discussed later is added to each halo to represent the stellar mass.
 
 With GLAMER we identify and map out all the caustics within the light-cone for 33 source planes -- z=1 to 3 in intervals of 0.1 and 3 to 6 in intervals of 0.25.  We take every caustic that corresponded to a critical curve with an Einstein radius larger than 1.5 times the resolution of the final images.  The Einstein radius is estimated here and in all that follows as $R_{\rm ein}=\sqrt{A_{\rm ein}/\pi}$ where $A_{\rm ein}$ is the angular area within the critical curve.
 
@@ -258,11 +257,11 @@ shapelet functions to remove noise.  This is the same set of images as
 used in \citet{2008AandA...482..403M,2010AandA...514A..93M} \citep[see
 also][]{2019MNRAS.482.2823P}.   There are 9,350 such sources with redshifts and separate shapelet coefficients in 4 bands.   
 
-To construct a mock lens, first a caustic on the highest redshift source plane is selected.  This is done in order of Einstein area, but all the critical curves are used more than once.  Since every lens with a caustic at a lower redshift will have a caustic at the highest redshift this is a selection from all of the caustics in the light-cone.   The lens is extracted as explained above and rotated randomly in three dimensions.  A source is selected at random from the shapelet catalog subject to a magnitude limit in a reference band.   The redshift of the UDF source is used as the source redshift.  If the source is at a lower redshift than the lens or within $\Delta z = 0.4$ another random source is selected.
+To construct a mock lens, first a caustic on the highest redshift source plane is selected.  This is done in order of Einstein area, but all the critical curves are used more than once.  Since every lens with a caustic at a lower redshift will have a caustic at the highest redshift this is a selection from all of the caustics in the light-cone.   The lens is extracted as explained above and rotated randomly in three dimensions.  A source is selected at random from the shapelet catalogue subject to a magnitude limit in a reference band.   The redshift of the UDF source is used as the source redshift.  If the source is at a lower redshift than the lens or within $\Delta z = 0.4$ another random source is selected.
 
 The furthest point in the caustic is found from its own center and the source is placed randomly within 3 times this distance.  This is a somewhat arbitrary length designed to be a compromise between producing only very clear strong lenses, because all the sources are right in the center of the caustic, and making the process inefficient because most of the sources are too far away from the caustic to produce clear lenses.  If the source positions were taken completely at random the fraction of clear lenses would be very low.
 
-The visible galaxies associated with the lens must also be simulated. There  are too few bright galaxies in the UDF catalog  to make enough mock lens galaxies for this purpose.  Instead, for most of the lenses, we used an analytic model for the surface brightness of these galaxies.  The Millennium Observatory provides parameters for the galaxies that inhabit the dark matter halos using the semi-analytic galaxy formation models of \citet{2011MNRAS.413..101G}.  The parameters used here were the total magnitude, the bulge-to-disk ratio, the disk scale height and the bulge effective radius.  The magnitude and bulge-to-disk ratio are a function of the pass band.  Each galaxy is given a random orientation and inclination angle between 0 and $80\degree$.  The disk is exponential with no vertical height which is why the inclination is limited to $80\degree$.  The bulge is represented by an elliptical S\'{e}rsic profile with an axis ratio randomly sampled between 0.5 and 1.  The S\'{e}rsic index, $n_s$, is given by 
+The visible galaxies associated with the lens must also be simulated. There  are too few bright galaxies in the UDF catalogue  to make enough mock lens galaxies for this purpose.  Instead, for most of the lenses, we used an analytic model for the surface brightness of these galaxies.  The Millennium Observatory provides parameters for the galaxies that inhabit the dark matter halos using the semi-analytic galaxy formation models of \citet{2011MNRAS.413..101G}.  The parameters used here were the total magnitude, the bulge-to-disk ratio, the disk scale height and the bulge effective radius.  The magnitude and bulge-to-disk ratio are a function of the pass band.  Each galaxy is given a random orientation and inclination angle between 0 and $80\degree$.  The disk is exponential with no vertical height which is why the inclination is limited to $80\degree$.  The bulge is represented by an elliptical S\'{e}rsic profile with an axis ratio randomly sampled between 0.5 and 1.  The S\'{e}rsic index, $n_s$, is given by 
 \begin{align}
 \log( n_s )= 0.4 \log\left[ {\rm max}\left(\frac{B}{T},0.03\right)\right] + 0.1 x 
 \end{align}
@@ -424,7 +423,7 @@ The model lens light is truncated at the smallest radius between the position wh
 
 In the space-based challenge, it is not possible to separate lens and source based on colour, because only data in one band is provided. The lens light model then is produced by taking a centrally-inverted image and then using the same truncation prescription used with ground-based data. The central inversion step is taken to reduce the chances of subtracting flux from lensed images, which are in general not centrally symmetric as opposed to typical lens galaxies.
 
-In the full version of YattaLens, a lens modeling step is performed to improve the purity of the sample. However, such a procedure is too time consuming and was not performed in this challenge.
+In the full version of YattaLens, a lens modelilng step is performed to improve the purity of the sample. However, such a procedure is too time consuming and was not performed in this challenge.
 
 \subsection{Machine Learning Methods that use pre-selected features}
 
@@ -501,7 +500,7 @@ Since Convolutional Neural Networks (CNNs) are central to many of the methods th
 The fundamental building block of a CNN is the \textit{convolutional layer}. This element applies a set of convolution filters on an input image to produce a series of so-called \textit{feature maps}. The coefficients of these filters are free parameters that are learned by the model. The notation 
 $n \times n - n_c$ will signify a convolutional layer using filters of size $n \times n$ pixels and outputting $n_c$ feature maps.  In typical architectures, the size of these convolution filters is kept small (i.e. 3x3 or 5x5 pixels) to limit the complexity of the model. 
 
-Similarly to conventional fully-connected neural networks, convolution layers are typically followed  by an element-wise activation function, which allows for the modeling of complex functional forms  by introducing non-linearities in the model.  Classical choices  for  activation functions  include the sigmoid-shaped logistic  function (or just sigmoid) $f(x) = 1/ (1  + \exp(-x))$ or the hyperbolic tangent function $f(x) = \tanh(x)$. However, much of the success of Deep Learning is due to the  introduction of activation functions that do not saturate (become very close to one with very small derivatives), allowing for the  efficient training  of very deep architectures. The most common choice in modern deep learning models  is the simple ReLU activation (for rectified linear unit) \citep{Nair2010} defined as $f(x) = \max(x, 0 )$. A closely related  common alternative is the ELU activation (for Exponential Linear Unit) \citep{2015arXiv151107289C} defined as 
+Similarly to conventional fully-connected neural networks, convolution layers are typically followed  by an element-wise activation function, which allows for the modelling of complex functional forms  by introducing non-linearities in the model.  Classical choices  for  activation functions  include the sigmoid-shaped logistic  function (or just sigmoid) $f(x) = 1/ (1  + \exp(-x))$ or the hyperbolic tangent function $f(x) = \tanh(x)$. However, much of the success of Deep Learning is due to the  introduction of activation functions that do not saturate (become very close to one with very small derivatives), allowing for the  efficient training  of very deep architectures. The most common choice in modern deep learning models  is the simple ReLU activation (for rectified linear unit) \citep{Nair2010} defined as $f(x) = \max(x, 0 )$. A closely related  common alternative is the ELU activation (for Exponential Linear Unit) \citep{2015arXiv151107289C} defined as 
 \begin{equation}
 	f(x ) = \begin{cases}
     x & \text{if } x\geq 0\\
@@ -1001,7 +1000,7 @@ A large variety of lens finding methods were tested on simulated images that wer
 We have done a fairly good job of determining that lenses can be identified in a population of fairly "normal" galaxies.  It is the rare "abnormal" objects that pose the greatest challenge.  When real KiDS data was used in the simulations the classifiers were all less accurate and it was only human inspection that found the one jackpot lens (a double Einstein ring with two background sources) in the data.  Things like ring galaxies, tidal tails in merging galaxies and irregular galaxies can be mistaken for lenses and were not well represented in the simulated data.  Accurately reproducing these objects will be an objective of future work.  This might be done by including more real images in the challenge or images based on real images with some random elements added.
 
 It was surprising to some of the authors how well CNN and SVM methods did relative to human inspection.  These methods find differences in the classes of images that are not obvious to a human and can classify things as lenses with high confidence where a human would have doubt. 
-This ability comes with some danger of over fitting to the training set however.  The distinguishing characteristics might only be a property of simulated data and not of real data.  In principle, SVM methods might potentially mitigate this somewhat because with them one can choose which features to use based on knowledge of the properties of irregular galaxies or ring galaxies for example.  This has yet to be shown however.  Methods based on fitting with a lens modeling code \citep{2009ApJ...694..924M,2017arXiv170401585S} might also help to mitigate this problem.
+This ability comes with some danger of over fitting to the training set however.  The distinguishing characteristics might only be a property of simulated data and not of real data.  In principle, SVM methods might potentially mitigate this somewhat because with them one can choose which features to use based on knowledge of the properties of irregular galaxies or ring galaxies for example.  This has yet to be shown however.  Methods based on fitting with a lens modelling code \citep{2009ApJ...694..924M,2017arXiv170401585S} might also help to mitigate this problem.
 The confidence one will have in the machine learning methods is really limited by the confidence one has in the realism of the simulations.   It might be useful in the future to have a challenge without a training set.  This might more clearly reveal the presence of over-fitting.  
 It would also be useful to include more real images or images more closely based on real images.
 
